# claude

./: .git-hooks-info.md  .gitignore  AGENT_UPGRADE_PLAN.md  BEST_PRACTICES.md  CLAUDE_INTEGRATED.md  CLAUDE_STATUSBAR_CONFIG.md  CLEANUP_SUMMARY.md  COMPLETE_USER_MANUAL.md  DEEPSEEK_FINAL_SOLUTION.md  DEEPSEEK_MCP_INTEGRATION.md  DOCUMENTATION_INDEX.md  DZH_MCP_修复报告.md  DZH项目完成报告.md  GLM_API_Guide.md  GLM_ClaudeCode_Integration_Guide.md  HOW_TO_USE.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.txt  MCP_GLOBAL_CONFIG.md  OPTIMIZATION_PROJECT_SUMMARY.md  PYTHON_3_12_INSTALL_STATUS.md  PYTHON_INSTALLER_RECOMMENDATION.md  PYTHON_MCP_FINAL_STATUS.md  QUICK_START.md  README.md  SYSTEM_OPTIMIZATION_PLAN.md  WELCOME_CENTER.md  WINDOWS_STATUS_FIX.md  agentflow_coordinator.py  agentflow_general_launcher.py  cloudbase-mcp  cloudbase-mcp.cmd  cloudbase-mcp.ps1  communication_protocol.py  dzh_html_extractor.py  dzh_html_parser.py  dzh_real_analysis.py  enhanced_flow_agent.py  enhanced_token_manager.py  enterprise-backend-architecture-2025.md  (+28 more)
.claude/: claude_desktop_config.json  settings.json  settings.local.json  settings.local.json.backup.20251111_042500  statusline.bat  statusline_current.bat  statusline_cycle.bat  statusline_detector.bat  statusline_dynamic.bat  statusline_enhanced.bat  statusline_fixed.bat  statusline_mode.bat  statusline_realtime.bat  statusline_simple.bat  statusline_simple_new.bat  statusline_smart.bat  statusline_universal.bat  switch_mode.bat  test_statusline.bat
.claude/commands/: glm-coding.md
agent_upgrades/: frontend_expert_v3_2024.md  python_pro_v3_enhanced.md
claude-code-mcp-backup-20251214-085231/: BACKUP_COMPLETE.md  BACKUP_LOG.md  CLAUDE_ALIAS_FIX.md  CLEANUP_SUMMARY.md  CROSSPLATFORM_FIX.md  FUSION_STATUSLINE_SOLUTION.md  GLM_4_6_OPTIMIZATION_GUIDE.md  README_UBUNTU_STATUSLINE.md  STATUSLINE_EXECUTION_ANALYSIS.md  UBUNTU_STATUSLINE_FIX.md  agentflow-bottom-status.ps1  agentflow-bottom-status.sh  ai_behavior_constraints.json  chrome-devtools-mcp.cmd  claude_wrapper.cmd  current_mode.txt  mcp_servers_status.txt  npm_global_packages.txt  set_claude_mode.bat  set_mode.bat  settings.json  settings.json.backup.20251213_163002  settings.local.json  statusbar_simple.ps1  statusline-command.sh  statusline_clean.bat  statusline_ultimate.bat
claude-code-mcp-backup-20251214-085231/commands/: mcp.md
claude-code-mcp-backup-20251214-085231/configs/: dzh_api_simple.json
claude-code-mcp-backup-20251214-085231/hooks/: mode-switch.bat
claude_optimizer/: PROJECT_SUMMARY.md  README.md  compatibility_validator.py  config_manager.py  example_usage.py  install.bat  main.py  maintenance_scheduler.py  requirements.txt  run_optimizer.py
claude_optimizer/configs/: compatibility_config.json  optimizer_config.json  performance_thresholds.json  scheduler_config.json
claude_optimizer/monitoring/: monitoring_config.json  performance_dashboard.py
claude_optimizer/tools/: __init__.py  disk_optimizer.py  network_optimizer.py  registry_cleaner.py  security_enhancer.py  service_manager.py
dzh_deepseek_integration_20251120_163135/: BACKUP_MANIFEST.md  TEST_REPORT.md  restore.sh
dzh_deepseek_integration_20251120_163135/claude-tools/: claude_deepseek_bridge.py  deepseek_integration.py  (+2 more)
main-config/: .current_mode
mcp-tools/: package-lock.json  synced-mcp-config-complete.json
modern-frontend-2025/: README.md  next.config.js  package.json  package_fixed.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
zhipu-ai-config/: .env.example  README.md  example_app.py  requirements.txt
zhipu-ai-sdk/: QUICK_START.md  README.md  pyproject.toml
zhipu-ai-sdk/examples/: basic_chat.py  batch_processing.py  code_generation.py  streaming.py
zhipu-ai-sdk/src/zhipuai/: __init__.py  client.py  config.py  exceptions.py  version.py
zhipu-ai-sdk/src/zhipuai/auth/: __init__.py  auth_handler.py
zhipu-ai-sdk/src/zhipuai/core/: __init__.py  http_client.py  retry.py  streaming.py
zhipu-ai-sdk/src/zhipuai/models/: __init__.py  chat.py  code.py  common.py
zhipu-ai-sdk/src/zhipuai/utils/: __init__.py  batch_processor.py  helpers.py  metrics.py  rate_limiter.py
zhipu-ai-sdk/tests/: conftest.py
zhipu-ai-sdk/tests/unit/: test_client.py
(+628 files in other folders)
