[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhipu-ai-sdk"
version = "1.0.0"
description = "智谱AI编码端点集成库 - 生产级Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zhipu AI SDK Team", email = "sdk@zhipu.ai"}
]
keywords = ["zhipu", "ai", "coding", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "typing-extensions>=4.12.0",
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
    "cryptography>=43.0.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
]

examples = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

performance = [
    "orjson>=3.10.0",
    "lz4>=4.3.0",
    "xxhash>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/zhipu-ai/zhipu-ai-sdk"
Documentation = "https://zhipu-ai-sdk.readthedocs.io"
Repository = "https://github.com/zhipu-ai/zhipu-ai-sdk.git"
Issues = "https://github.com/zhipu-ai/zhipu-ai-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001",
    "SIM",
    "TCH",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "B008", "S101"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "network: Tests requiring network",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.report]
show_missing = true
precision = 2
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]